--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
       >
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <h4 class="hover-underline-animation">Snack Game</h4>
+            <p class="hover-underline-animation p-name">Snack Game</p>
             <img src="images/snack.png" alt="dog-profile" class="img-pro" />
             <em
               >Lorem ipsum dolor sit amet consectetur adipisicing elit. Et
@@ -140,7 +140,7 @@
             >
           </div>
           <div class="carousel-item">
-            <h4 class="hover-underline-animation">To-do list</h4>
+            <p class="hover-underline-animation p-name">Todo list</p>
             <img
               src="images/to-do-list.png"
               alt="dog-profile"
@@ -152,7 +152,7 @@
             >
           </div>
           <div class="carousel-item">
-            <h4 class="hover-underline-animation">Calculator</h4>
+            <p class="hover-underline-animation p-name">Calculator</p>
             <img src="images/cal.png" alt="dog-profile" class="img-pro" />
             <em
               >Lorem ipsum, dolor sit amet consectetur adipisicing elit. Culpa
@@ -160,7 +160,7 @@
             >
           </div>
           <div class="carousel-item">
-            <h4 class="hover-underline-animation">Ping-Pong</h4>
+            <p class="hover-underline-animation p-name">Ping Pong</p>
             <img src="images/png.png" alt="dog-profile" class="img-pro" />
             <em
               >Lorem ipsum, dolor sit amet consectetur adipisicing elit. Culpa
@@ -215,12 +215,12 @@
 
             <p><i class="fa-brands fa-python"></i> Python / Automation</p>
             <div style="background-color: #9e9e9e; text-align: center">
-              <div style="width: 0%" class="bg-dark pythonT">70%</div>
+              <div style="width: 0%" class="bg-dark pythonT">90%</div>
             </div>
 
             <p><i class="fa-solid fa-code"></i> C / C++ / Competitive</p>
             <div style="background-color: #9e9e9e; text-align: center">
-              <div style="width: 0%" class="bg-dark cT">90%</div>
+              <div style="width: 0%" class="bg-dark cT">95%</div>
             </div>
           </div>
         </div>
