--- a/index.html
+++ b/index.html
@@ -196,12 +196,20 @@
         <div class="row">
           <div class="col-md-6 skill-info">
             <h3>My Skill</h3>
-            <p>
+            <p
+              data-aos="fade-right"
+              data-aos-easing="linear"
+              data-aos-duration="800"
+            >
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit
               reiciendis nulla odio mollitia cumque incidunt tempore possimus
               vitae dignissimos impedit.
             </p>
-            <p>
+            <p
+              data-aos="fade-left"
+              data-aos-easing="linear"
+              data-aos-duration="800"
+            >
               Lorem ipsum dolor sit amet, consectetur adipisicing elit.
               Inventore excepturi vero minima deleniti, dolorum velit.
               Laboriosam dolor sapiente eius odio.
@@ -231,7 +239,7 @@
 
     <section class="contact">
       <div class="contact-div">
-        <h3>Contact Me</h3>
+        <h3 class="hover-underline-animation">Contact Me</h3>
         <form>
           <div class="form-group">
             <label for="exampleInputPassword1">Name</label>
@@ -281,11 +289,30 @@
     <!------------- footer ------------->
     <footer>
       <div class="medial-log">
-        <i class="fa-brands l-1 fa-instagram"></i>
-        <i class="fa-brands l-2 fa-linkedin-in"></i>
-        <i class="fa-brands l-3 fa-twitter"></i>
-        <i class="fa-brands l-4 fa-snapchat"></i>
-        <i class="fa-brands l-5 fa-facebook"></i>
+        <a
+          href="https://www.instagram.com/vaibhav_712._/?next=%2F"
+          style="text-decoration: none; color: #090909"
+          ><i class="fa-brands l-1 fa-instagram"></i></a
+        ><a
+          href="https://www.linkedin.com/in/vaibhav-sanepara-6849b2249/"
+          style="text-decoration: none; color: #090909"
+          ><i class="fa-brands l-2 fa-linkedin-in"></i>
+        </a>
+        <a
+          href="https://twitter.com/SaneparaVaibhav"
+          style="text-decoration: none; color: #090909"
+          ><i class="fa-brands l-3 fa-twitter"></i>
+        </a>
+        <a
+          href="https://accounts.snapchat.com/accounts/welcome"
+          style="text-decoration: none; color: #090909"
+          ><i class="fa-brands l-4 fa-snapchat"></i>
+        </a>
+        <a
+          href="https://www.facebook.com/profile.php?id=100014655310418"
+          style="text-decoration: none; color: #090909"
+          ><i class="fa-brands l-5 fa-facebook"></i>
+        </a>
       </div>
       <p>Created By <span class="credit">vaibhav</span></p>
     </footer>
