--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
 
   <body>
     <!------------- Navbar ------------->
-
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light">
       <a class="navbar-brand" href="#">THE</a>
       <button
         class="navbar-toggler"
