--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 
     <section class="contact">
       <div class="contact-div">
-        <h3 class="hover-underline-animation">Contact Me</h3>
+        <h3 class="">Contact Me</h3>
         <form>
           <div class="form-group">
             <label for="exampleInputPassword1">Name</label>
