--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
       >
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <p class="hover-underline-animation p-name">Snack Game</p>
+            <p class="p-name">Snack Game</p>
             <img src="images/snack.png" alt="dog-profile" class="img-pro" />
             <em
               >Lorem ipsum dolor sit amet consectetur adipisicing elit. Et
@@ -139,7 +139,7 @@
             >
           </div>
           <div class="carousel-item">
-            <p class="hover-underline-animation p-name">Todo list</p>
+            <p class="p-name">Todo list</p>
             <img
               src="images/to-do-list.png"
               alt="dog-profile"
@@ -151,7 +151,7 @@
             >
           </div>
           <div class="carousel-item">
-            <p class="hover-underline-animation p-name">Calculator</p>
+            <p class="p-name">Calculator</p>
             <img src="images/cal.png" alt="dog-profile" class="img-pro" />
             <em
               >Lorem ipsum, dolor sit amet consectetur adipisicing elit. Culpa
@@ -159,7 +159,7 @@
             >
           </div>
           <div class="carousel-item">
-            <p class="hover-underline-animation p-name">Ping Pong</p>
+            <p class="p-name">Ping Pong</p>
             <img src="images/png.png" alt="dog-profile" class="img-pro" />
             <em
               >Lorem ipsum, dolor sit amet consectetur adipisicing elit. Culpa
