--- a/index.html
+++ b/index.html
@@ -55,14 +55,14 @@
 
       <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item active">
+          <li class="nav-item e">
             <a class="nav-link" href="#">Contact</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Project</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled" href="#">About</a>
+            <a class="nav-link" href="#">About</a>
           </li>
         </ul>
       </div>
