--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
       href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap"
       rel="stylesheet"
     />
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5069752734401860"
+     crossorigin="anonymous"></script>
   </head>
 
   <body>
