--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
 
     <section id="contact" class="contact">
       <div class="contact-div">
-        <h3 class="">Contact Me</h3>
+        <h3 class="">Contact Me.</h3>
         <form
           action="mailto:saneparavaibhav73@gmail.com"
           method="post"
